(library
 (name kaleidoscope_lib)
 (libraries 
   async
   core
   ctypes.foreign
   llvm
   llvm.analysis
   llvm.executionengine
   llvm.target
   llvm.scalar_opts
   menhirLib)
 (preprocess (pps ppx_jane ppx_expect ppx_let))
 (inline_tests))

(rule
 (targets lexer.ml)
  (deps lexer.mll)
  (action (run %{bin:ocamllex} -q -o %{targets} %{deps})))

(rule 
 (targets parser.mli parser.ml)
  (deps parser.mly)
  (action (run menhir --external-tokens Ast --explain --table %{deps})))

(env
 (dev
  (flags (:standard -warn-error -9))))
